--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,8 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/workspace_java/mysql-connector-j-8.0.32.jar"/>
+	<classpathentry kind="lib" path="D:/workspace_java/Project_1/jarFiles/mysql-connector-j-8.0.32.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Dell/Downloads/jar_files(2)/activation-1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Dell/Downloads/jar_files(2)/javax.mail-1.6.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
